--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -1,7 +1,7 @@
 
 <div class="project-comment-period-view">
 
-	<div class="view-title-container">
+	<div class="view-title-container no-border">
 		<h1>{{ project.name }}&nbsp; &rsaquo; &nbsp;Comment Periods</h1>
 	</div>
 
