--- a/modules/email-templates/client/views/email-template-edit.html
+++ b/modules/email-templates/client/views/email-template-edit.html
@@ -13,62 +13,56 @@
 					<button class="btn btn-xs btn-link" href type="submit">Save</button>
 				</div>
 			</div>
-
-			<div class="panel panel-default">
-				<div class="panel-body">
 					
-					<div class="row">
-						<div class="col-sm-6">
-							<div class="form-group" x-show-errors>
-								<label for="name" class="control-label">Name</label>
-								<input id="name" name="name" type="text" class="form-control input-sm" ng-model="emailtemplate.name" required>
-									<div ng-messages="emailtemplateForm.name.$error" role="alert">
-										<p class="help-block error-text" ng-message="required">Name is required.</p>
-									</div>
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="form-group" x-show-errors>
+						<label for="name" class="control-label">Template Name</label>
+						<input id="name" name="name" type="text" class="form-control input-sm" ng-model="emailtemplate.name" required>
+							<div ng-messages="emailtemplateForm.name.$error" role="alert">
+								<p class="help-block error-text" ng-message="required">Name is required.</p>
 							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="form-group" x-show-errors>
-								<label for="group" class="control-label">Group</label>
-								<input id="group" name="group" type="text" class="form-control input-sm" ng-model="emailtemplate.group" required>
-									<div ng-messages="emailtemplateForm.group.$error" role="alert">
-										<p class="help-block error-text" ng-message="required">Group is required.</p>
-									</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="form-group" x-show-errors>
+						<label for="group" class="control-label">Group</label>
+						<input id="group" name="group" type="text" class="form-control input-sm" ng-model="emailtemplate.group" required>
+							<div ng-messages="emailtemplateForm.group.$error" role="alert">
+								<p class="help-block error-text" ng-message="required">Group is required.</p>
 							</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="form-group" x-show-errors>
+						<label for="subject" class="control-label">Subject</label>
+						<input id="subject" name="subject" type="text" class="form-control input-sm" ng-model="emailtemplate.subject" required>
+						<div ng-messages="emailtemplateForm.subject.$error" role="alert">
+							<p class="help-block error-text" ng-message="required">Subject is required.</p>
 						</div>
 					</div>
-					
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="form-group" x-show-errors>
-								<label for="subject" class="control-label">Subject</label>
-								<input id="subject" name="subject" type="text" class="form-control input-sm" ng-model="emailtemplate.subject" required>
-								<div ng-messages="emailtemplateForm.subject.$error" role="alert">
-									<p class="help-block error-text" ng-message="required">Subject is required.</p>
-								</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="form-group" x-show-errors>
+						<label for="content" class="control-label">Content</label>
+						<textarea ui-tinymce id="content" rows="10" name="content" class="form-control" ng-model="emailtemplate.content" required></textarea>
+							<div ng-messages="emailtemplateForm.content.$error" role="alert">
+								<p class="help-block error-text" ng-message="required">Content is required.</p>
 							</div>
-						</div>
 					</div>
-					
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="form-group" x-show-errors>
-								<label for="content" class="control-label">Content</label>
-								<textarea ui-tinymce id="content" rows="10" name="content" class="form-control" ng-model="emailtemplate.content" required></textarea>
-									<div ng-messages="emailtemplateForm.content.$error" role="alert">
-										<p class="help-block error-text" ng-message="required">Content is required.</p>
-									</div>
-							</div>
-						</div>
-					</div>
+				</div>
+			</div>
 
-					<div class="form-footer no-border clearfix">
-						<div class="pull-right">
-							<button class="btn btn-default" ui-sref="admin.emailtemplate.list">Cancel</button>
-							<button class="btn btn-primary" type="submit">Save</button>
-						</div>
-					</div>
-
+			<div class="form-footer no-border clearfix">
+				<div class="pull-right">
+					<button class="btn btn-default" ui-sref="admin.emailtemplate.list">Cancel</button>
+					<button class="btn btn-primary" type="submit">Save</button>
 				</div>
 			</div>
 
