--- a/modules/roles/client/views/role-list.html
+++ b/modules/roles/client/views/role-list.html
@@ -1,10 +1,9 @@
 <div class="system-roles-view"></div>
 
-	<div class="view-title-container no-border">
-		<h1>System Roles</h1>
-	</div>
+	<div class="view-title-container"><h1>System Roles</h1></div>
 
 	<div class="view-body-container">
+		
 		<div class="button-bar clearfix">
 			<a class="btn btn-default btn-sm pull-left" ui-sref="admin.roles.create()">
 				<span class="glyphicon glyphicon-plus"></span>
@@ -14,18 +13,19 @@
 				<show-filter x-toggle-filter="toggleFilter"></show-filter>
 			</div>
 		</div>
-		<section class="panel panel-default">
-			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
+		
+		<div class="panel panel-default">
+			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="admin.roles.detail({roleCode:o.code})" class="clickable">
-          <td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
-          <td data-title="'Code'"  filter="{'code':'text'}"   sortable="'code'">{{o.code}}</td>
-					<td data-title="'Organization Code'"  filter="{'orgCode':'text'}"   sortable="'orgCode'">{{o.orgCode}}</td>
-					<td data-title="'Role Code'"  filter="{'roleCode':'text'}"   sortable="'roleCode'">{{o.roleCode}}</td>
-          <td data-title="'Functional'"  filter="{'isFunctional':'text'}"   sortable="'isFunctional'">{{o.isFunctional}}</td>
-          <td data-title="'Project Default'"  filter="{'isProjectDefault':'text'}"   sortable="'isProjectDefault'">{{o.isProjectDefault}}</td>
-					<td class="actions-col single-action" header-class="'actions-col single-action'">
-						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.roles.edit({roleCode:o.code})">
-							<i class="glyphicon glyphicon-pencil"></i>
+					<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
+					<td data-title="'Code'"  filter="{'code':'text'}"   sortable="'code'">{{o.code}}</td>
+								<td data-title="'Organization Code'"  filter="{'orgCode':'text'}"   sortable="'orgCode'">{{o.orgCode}}</td>
+								<td data-title="'Role Code'"  filter="{'roleCode':'text'}"   sortable="'roleCode'">{{o.roleCode}}</td>
+					<td data-title="'Functional'"  filter="{'isFunctional':'text'}"   sortable="'isFunctional'">{{o.isFunctional}}</td>
+          			<td data-title="'Project Default'"  filter="{'isProjectDefault':'text'}"   sortable="'isProjectDefault'">{{o.isProjectDefault}}</td>
+					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
+						<a class="btn btn-link btn-sm" title="Edit System Role" ng-click="$event.stopPropagation()" ui-sref="admin.roles.edit({roleCode:o.code})">
+							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
 				</tr>
@@ -35,7 +35,7 @@
 					</td>
 				</tr>
 			</table>
-		</section>
+		</div>
 	</div>
 
 </div>
