--- a/modules/templates/client/views/template-list.html
+++ b/modules/templates/client/views/template-list.html
@@ -5,6 +5,7 @@
 	</div>
 	
 	<div class="view-body-container">
+		
 		<div class="button-bar clearfix">
 			<a class="btn btn-default btn-sm" ui-sref="admin.template.create()">
 				<span class="glyphicon glyphicon-plus"></span>
@@ -14,8 +15,9 @@
 				<show-filter x-toggle-filter="toggleFilter"></show-filter>
 			</div>
 		</div>
-		<section class="panel panel-default">
-			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
+		
+		<div class="panel panel-default">
+			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-hover table-striped">
 				<tr ng-repeat="o in $data" ui-sref="admin.template.detail({templateId:o.id})" class="clickable">
 					<td data-title="'Document Type'"
 						filter="{'documentType':'text'}"
@@ -26,19 +28,21 @@
 					<td data-title="'Date Updated'"
 						sortable="'dateUpdated'"
 						class="text-center">{{o.dateUpdated | date:'y-MM-dd HH:mm a'}}</td>
-					<td width="1%" class="text-right">
-						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.template.edit({templateId:o.id})"><i class="glyphicon glyphicon-pencil"></i></a></td>
-					<td width="1%" class="text-right">
-						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.template.test({templateId:o.id})">
-						<i class="glyphicon glyphicon-play"></i>
-						</a></td>
+					<td class="actions-col action-x2" header-class="'actions-col action-x2'">
+						<a class="btn btn-link btn-sm" title="Edit Template" ng-click="$event.stopPropagation()" ui-sref="admin.template.edit({templateId:o.id})">
+							<span class="glyphicon glyphicon-pencil"></span></a>
+						<a class="btn btn-link btn-sm" title="Test Template" ng-click="$event.stopPropagation()" ui-sref="admin.template.test({templateId:o.id})">
+							<span class="glyphicon glyphicon-play"></span>
+						</a>
+					</td>
 				</tr>
 				<tr ng-if="!$data || $data.length === 0">
-					<td colspan="5">
+					<td colspan="4">
 						No records found.
 					</td>
 				</tr>
 			</table>
-		</section>
-	</div> <!-- / view-body-container- ->
+		</div>
+		
+	</div><!-- / view-body-container- ->
 </div>
