--- a/modules/roles/client/views/role-edit.html
+++ b/modules/roles/client/views/role-edit.html
@@ -77,8 +77,8 @@
 
       <div class="form-footer clearfix">
         <div class="pull-right">
-          <a class="btn btn-default btn-sm" ui-sref="admin.roles.list">Cancel</a>
-          <a class="btn btn-primary btn-sm" href ng-click="save(roleForm.$valid)">Save</a>
+          <a class="btn btn-default" ui-sref="admin.roles.list">Cancel</a>
+          <a class="btn btn-primary" href ng-click="save(roleForm.$valid)">Save</a>
         </div>
       </div>
 
