--- a/modules/email-templates/client/views/email-template-edit.html
+++ b/modules/email-templates/client/views/email-template-edit.html
@@ -1,6 +1,6 @@
 <div class="edit-email-template-view">
 
-	<div class="view-title-container no-border">
+	<div class="view-title-container">
 		<h1>Add/Edit Email Template</h1>
 	</div>
 
@@ -59,10 +59,10 @@
 				</div>
 			</div>
 
-			<div class="form-footer no-border clearfix">
+			<div class="form-footer clearfix">
 				<div class="pull-right">
 					<button class="btn btn-default" ui-sref="admin.emailtemplate.list">Cancel</button>
-					<button class="btn btn-primary" type="submit">Save</button>
+					<button class="btn btn-default" type="submit">Save</button>
 				</div>
 			</div>
 
