--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -108,7 +108,7 @@
 			<div class="form-footer no-border clearfix">
 				<div class="pull-right">
 					<button class="btn btn-default" ui-sref="admin.organization.list">Cancel</button>
-					<button class="btn btn-default" type="submit">Save</button>
+					<button class="btn btn-primary" type="submit">Save</button>
 				</div>
 			</div>
 
