--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -1,150 +1,158 @@
-<h1 class="page-title no-lower-margin">
-	Add / Edit Organization
-</h1>
-
-<div class="row" ng-init="expandOrgView = false">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" href ng-click="expandOrgView = !expandOrgView">
-			<span ng-show="expandOrgView">Reduce Organization Detail</span>
-			<span ng-show="!expandOrgView">Expand Organization Detail</span>
-		</a>
-		<a class="btn btn-xs btn-link" ui-sref="admin.organization.list">Cancel</a>
-		<a class="btn btn-xs btn-link" ui-sref="admin.organization.edit({orgId: org._id})">Edit</a>
-	</div>
-</div>
-
-<div class="panel panel-default">
-	<div class="panel-body">
-
-		<div class="row" >
-			<div class="col-sm-8">
-				<div class="form-group">
-					<label for="name" class="control-label">Name</label>
-					<p class="form-control-static">{{ org.name }}</p>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="form-group">
-					<label for="website" class="control-label">Website</label>
-					<p class="form-control-static">{{ org.website }}</p>
-				</div>
-			</div>
-		</div>
-
-		<div ng-show="expandOrgView">
-			<div class="row">
-				<div class="col-sm-8">
-					<div class="form-group">
-						<label for="company" class="control-label">Doing Business As</label>
-						<p class="form-control-static">{{ org.company }}</p>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label for="registeredIn" class="control-label">Registered In</label>
-						<p class="form-control-static">{{ org.registeredIn }}</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-8">
-					<div class="form-group">
-						<label for="companyLegal" class="control-label">Company Legal</label>
-						<p class="form-control-static">{{ org.companyLegal }}</p>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label for="companyType" class="control-label">Company Type</label>
-						<p class="form-control-static">{{ org.companyType }}</p>
-					</div>
-				</div>
-			</div>
-
-			<hr>
-
-			<div class="row">
-				<div class="col-sm-6">
-					<div class="form-group">
-						<label for="address1" class="control-label">Address (Line 1)</label>
-						<p class="form-control-static">{{ org.address1 }}</p>
-					</div>
-				</div>    
-				<div class="col-sm-6">
-					<div class="form-group">
-						<label for="address2" class="control-label">Address (Line 2)</label>
-						<p class="form-control-static">{{ org.address2 }}</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label for="city" class="control-label">City</label>
-						<p class="form-control-static">{{ org.city }}</p>
-					</div>
-				</div>    
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label for="province" class="control-label">Province</label>
-						<p class="form-control-static">{{ org.province }}</p>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label for="country" class="control-label">Country</label>
-						<p class="form-control-static">{{ org.country }}</p>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label for="postal" class="control-label">Postal Code</label>
-						<p class="form-control-static">{{ org.postal }}</p>
-					</div>
-				</div>
-			</div>
-
-			<hr>
-
-		</div>
-		
-		
-		
-		<div class="text-right">
-			<a class="btn btn-default" ui-sref="admin.organization.list">Cancel</a>
-			<a class="btn btn-default" ui-sref="admin.organization.edit({orgId: org._id})">Edit</a>
-		</div>
-
-	</div>
-</div>
-
-
-<h1 class="page-title no-lower-margin">
-	{{ org.name }} Users
-</h1>
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.organization.user.create({orgId: org._id})">+ Add New User</a>
-		<show-filter x-toggle-filter="toggleFilter"></show-filter>
-	</div>
-</div>
-<section class="panel panel-default">
+<div class="organization-view">
 	
-	<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
-		<tr ng-repeat="o in $data" class='clickable' ui-sref="admin.organization.user.detail({orgId: org._id, userId: o._id})">
-			<td data-title="'Name'"  filter="{'displayName':'text'}"   sortable="'displayName'">{{o.displayName}}</td>
-			<td data-title="'Username'"  filter="{'username':'text'}"   sortable="'username'">{{o.username}}</td>
-			<td data-title="'Email'" filter="{'email':'text'}"    sortable="'email'" >{{o.email}}</td>
-			<td width="1%" class="text-right">
-				<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
-					<i class="glyphicon glyphicon-pencil"></i>
+	<div class="view-title-container">
+		<h1>Organizations<span ng-show="org.name">&nbsp; &rsaquo; &nbsp;{{ org.name }}</span></h1>
+	</div>
+
+	<div class="view-body-container">
+		
+		<div class="row hidden" ng-init="expandOrgView = true">
+			<div class="col-sm-12 text-right">
+				<a class="btn btn-xs btn-link" href ng-click="expandOrgView = !expandOrgView">
+					<span ng-show="expandOrgView">Reduce Organization Detail</span>
+					<span ng-show="!expandOrgView">Expand Organization Detail</span>
 				</a>
-			</td>			
-		</tr>
-		<tr ng-show="!$data || !$data.length" class="text-center">
-			<td colspan="4">No records found.</td>
-		</tr>
-	</table>
-</section>
+				<a class="btn btn-xs btn-link" ui-sref="admin.organization.list">Cancel</a>
+				<a class="btn btn-xs btn-link" ui-sref="admin.organization.edit({orgId: org._id})">Edit</a>
+			</div>
+		</div>
+		
+		<ul class="nav nav-tabs">
+			<li role="presentation" class="active">
+				<a href="#orgDetails" aria-controls="home" role="tab" data-toggle="tab">Organization Details</a>
+			</li>
+    		<li role="presentation">
+				<a href="#orgUsers" aria-controls="profile" role="tab" data-toggle="tab">Users</a>
+			</li>
+		</ul>
+
+		<div class="tab-content">
+			
+			<!-- DETAILS TAB CONTENT -->
+			<div class="tab-pane active" id="orgDetails" role="tabpanel">
+				<div class="row" >
+					<div class="col-sm-8">
+						<div class="form-group">
+							<label for="name" class="control-label">Organization Name</label>
+							<p class="form-control-static">{{ org.name }}</p>
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="form-group">
+							<label for="website" class="control-label">Website</label>
+							<p class="form-control-static">{{ org.website }}</p>
+						</div>
+					</div>
+				</div>
+				<div ng-show="expandOrgView">
+					<div class="row">
+						<div class="col-sm-8">
+							<div class="form-group">
+								<label for="company" class="control-label">Doing Business As</label>
+								<p class="form-control-static">{{ org.company }}</p>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="form-group">
+								<label for="registeredIn" class="control-label">Registered In</label>
+								<p class="form-control-static">{{ org.registeredIn }}</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-8">
+							<div class="form-group">
+								<label for="companyLegal" class="control-label">Company Legal</label>
+								<p class="form-control-static">{{ org.companyLegal }}</p>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="form-group">
+								<label for="companyType" class="control-label">Company Type</label>
+								<p class="form-control-static">{{ org.companyType }}</p>
+							</div>
+						</div>
+					</div>
+
+					<hr>
+
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="form-group">
+								<label for="address1" class="control-label">Address (Line 1)</label>
+								<p class="form-control-static">{{ org.address1 }}</p>
+							</div>
+						</div>    
+						<div class="col-sm-6">
+							<div class="form-group">
+								<label for="address2" class="control-label">Address (Line 2)</label>
+								<p class="form-control-static">{{ org.address2 }}</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-3">
+							<div class="form-group">
+								<label for="city" class="control-label">City</label>
+								<p class="form-control-static">{{ org.city }}</p>
+							</div>
+						</div>    
+						<div class="col-sm-3">
+							<div class="form-group">
+								<label for="province" class="control-label">Province</label>
+								<p class="form-control-static">{{ org.province }}</p>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="form-group">
+								<label for="country" class="control-label">Country</label>
+								<p class="form-control-static">{{ org.country }}</p>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="form-group">
+								<label for="postal" class="control-label">Postal Code</label>
+								<p class="form-control-static">{{ org.postal }}</p>
+							</div>
+						</div>
+					</div>
+				</div>
+						
+				<div class="form-footer clearfix">
+					<a class="btn btn-default pull-left hidden" ui-sref="admin.organization.list">Cancel</a>
+					<a class="btn btn-default pull-right" ui-sref="admin.organization.edit({orgId: org._id})">Edit Details</a>
+				</div>
+			</div><!-- / DETAILS TAB CONTENT -->
+			
+			<!-- USERS TAB CONTENT -->
+			<div class="tab-pane" id="orgUsers" role="tabpanel">
+				<div class="button-bar clearfix">
+					<a class="btn btn-default btn-sm pull-left" ui-sref="admin.organization.user.create({orgId: org._id})">
+						<span class="glyphicon glyphicon-plus"></span><span>Add User</span>
+					</a>
+					<div class="pull-right">
+						<show-filter x-toggle-filter="toggleFilter"></show-filter>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
+						<tr ng-repeat="o in $data" class='clickable' ui-sref="admin.organization.user.detail({orgId: org._id, userId: o._id})">
+							<td data-title="'Name'"  filter="{'displayName':'text'}"   sortable="'displayName'">{{o.displayName}}</td>
+							<td data-title="'Username'"  filter="{'username':'text'}"   sortable="'username'">{{o.username}}</td>
+							<td data-title="'Email'" filter="{'email':'text'}"    sortable="'email'" >{{o.email}}</td>
+							<td class="actions-col action-x1" header-class="'actions-col action-x1'">
+								<a ng-click="$event.stopPropagation()" class="btn btn-link btn-sm" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
+									<span class="glyphicon glyphicon-pencil"></span>
+								</a>
+							</td>			
+						</tr>
+						<tr ng-show="!$data || !$data.length" class="text-center">
+							<td colspan="4">No records found.</td>
+						</tr>
+					</table>
+				</div>
+			</div><!-- / USERS TAB CONTENT -->
+		</div>
+
+	</div><!-- / VIEW BODY CONTAINER -->
+</div>
