--- a/modules/recent-activity/client/views/recent-activity-list.html
+++ b/modules/recent-activity/client/views/recent-activity-list.html
@@ -1,6 +1,6 @@
 <div class="news-admin-view">
 
-	<div class="view-title-container no-border">
+	<div class="view-title-container">
 		<h1>News & Announcements</h1>  
 	</div>
 
@@ -9,7 +9,7 @@
 		<div class="button-bar clearfix">
 			<a class="btn btn-default btn-sm pull-left" ui-sref="admin.recentactivity.create()">
 				<span class="glyphicon glyphicon-plus"></span>
-				<span>Add</span>
+				<span>Add News & Announcements</span>
 			</a>
 			<div class="pull-right">
 				<show-filter x-toggle-filter="toggleFilter"></show-filter>
@@ -17,7 +17,7 @@
 		</div>
 
 		<section class="panel panel-default">
-			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
+			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
 				
 				<!-- NEWS ROW ITEM TEMPLATE -->
 				<tr ng-repeat="o in $data">
@@ -38,8 +38,8 @@
 					
 					<!-- <td data-title="'Priority'" class="text-center" sortable="'priority'" >{{o.priority}}</td> -->
 					
-					<td class="actions-col single-action" header-class="'actions-col single-action'">
-						<a class="btn btn-link" title="Edit News Item" ng-click="$event.stopPropagation()" ui-sref="admin.recentactivity.edit({recentActivityId:o._id})">
+					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
+						<a class="btn btn-link btn-sm" title="Edit News Item" ng-click="$event.stopPropagation()" ui-sref="admin.recentactivity.edit({recentActivityId:o._id})">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
