--- a/modules/roles/client/views/role-view.html
+++ b/modules/roles/client/views/role-view.html
@@ -6,16 +6,16 @@
 
 	<div class="view-body-container">
 
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="form-group">
-          <label for="name" class="control-label">Role Name</label>
-          <p class="form-control-static">{{ role.name }}</p>
-        </div>
-      </div>
-    </div>
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="form-group">
+					<label for="name" class="control-label">Role Name</label>
+					<p class="form-control-static">{{ role.name }}</p>
+				</div>
+			</div>
+		</div>
 		
-    <div class="row">
+    	<div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
 					<label for="code" class="control-label">Code</label>
@@ -71,7 +71,7 @@
 			<div class="panel-heading">
 				<h2>Role Usage</h2>
 			</div>
-			<table class="table table-condensed table-striped">
+			<table class="table table-striped">
 				<thead>
 					<tr>
 						<th colspan="2">System Element</th>
@@ -118,9 +118,11 @@
 			</table>
 		</div>
 
-		<div class="form-footer no-border clearfix">
-				<a class="btn btn-default btn-sm pull-left" ui-sref="admin.roles.list">&lsaquo;&nbsp; Back to System Roles</a>
-				<a class="btn btn-default btn-sm pull-right" ui-sref="admin.roles.edit({roleCode:role.code})">Edit</a>
+		<div class="form-footer clearfix">
+			<a class="back-btn btn btn-link pull-left" ui-sref="admin.roles.list">
+				<span class="glyphicon glyphicon-chevron-left"></span>Back to System Roles
+			</a>
+			<a class="btn btn-default pull-right" ui-sref="admin.roles.edit({roleCode:role.code})">Edit</a>
 		</div>
 
 	</div>
