--- a/modules/topics/client/views/topic-edit.html
+++ b/modules/topics/client/views/topic-edit.html
@@ -63,7 +63,7 @@
 			<div class="form-footer">
 				<div class="pull-right">
 					<button class="btn btn-default" ui-sref="admin.topic.list">Cancel</button>
-					<button class="btn btn-default" type="submit">Save</button>
+					<button class="btn btn-primary" type="submit">Save</button>
 				</div>
 			</div>
 
