--- a/modules/roles/client/views/project-role-edit.html
+++ b/modules/roles/client/views/project-role-edit.html
@@ -42,9 +42,9 @@
         </div>
         <div class="col-sm-4">
           <div class="form-group" x-show-errors>
-            <label for="org" class="control-label">Organization Code</label>
-            <input id="org" name="org" type="text" ng-readonly="isEdit" class="form-control input-sm" ng-model="role.orgCode" ng-change="calculateCode()" required>
-            <div ng-messages="roleForm.org.$error" role="alert">
+            <label for="orgCode" class="control-label">Organization Code</label>
+            <input id="orgCode" name="orgCode" type="text" ng-readonly="isEdit" class="form-control input-sm" ng-model="role.orgCode" ng-change="calculateCode()" required>
+            <div ng-messages="roleForm.orgCode.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Organization Code is required.</p>
             </div>
           </div>
