--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -35,14 +35,9 @@
 								<td class="actions-col">
 									<button class="btn btn-link">
 										<span class="glyphicon glyphicon-pencil"
-											  data-toggle="modal"
-											  data-target="#editMilestoneModal"
-											  ng-click="editMilestone(row._id, phase)"></span>
+											  ng-click="openEditMilestone(row._id)"></span>
 									</button>
-									<button class="btn btn-link"
-											data-toggle="modal"
-											data-target="#confirmModal"
-											ng-click="selectedMilestone(row._id, phase)">
+									<button class="btn btn-link" ng-click="openDeleteMilestone(row._id)">
 										<span class="glyphicon glyphicon-trash"></span>
 									</button>
 								</td>
@@ -114,52 +109,6 @@
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 <!-- EDIT MILESTONE -->
-<div class="modal fade" id="editMilestoneModal" role="dialog" tabindex="-1">
-	<div class="modal-dialog add-milestone-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-				<h3 class="modal-title">Edit Milestone</h3>
-			</div>
-			<div class="modal-body">
-				<div class="form-group">
-					<label>Milestone:</label>
-					<div>{{data.name}}</div>
-				</div>
-				<div class="form-group has-error" ng-class="{'has-error': validateForm}">
-					<label>Date Range / Effective Date?</label>
-					<div class="date-range-control clearfix">
-						<div class="date-range input-group pull-left">
-							<span class="input-group-btn">
-								<button class="btn btn-default">
-									<span class="glyphicon glyphicon-calendar"></span>
-								</button>
-							</span>
-							<!-- {{data.dateStarted}} -->
-							<input class="form-control" type="text" placeholder="mm/dd/yyyy" ng-model="dateStartedEst" />
-						</div>
-						<div class="pull-left spacer">-</div>
-						<div class="date-range input-group pull-left">
-							<span class="input-group-btn">
-								<button class="btn btn-default">
-									<span class="glyphicon glyphicon-calendar"></span>
-								</button>
-							</span>
-							<input class="form-control" type="text" placeholder="mm/dd/yyyy" ng-model="dateCompletedEst"/>
-						</div>
-					</div>
-					<div class="help-block">Invalid Date Range Message</div>
-				</div>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-				<button ng-click="saveMilestone(data)" type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
-			</div>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
 
 <!-- ADD COMMENT SESSION MODAL -->
 <div class="modal fade" id="addCommentSessionModal" role="dialog" tabindex="-1">
@@ -219,28 +168,6 @@
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 				<button type="button" class="btn btn-primary" disabled="disabled">Add Comment Session</button>
-			</div>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-
-
-<!-- CONFIRMATION MODAL -->
-<div class="modal fade" id="confirmModal" role="dialog" tabindex="-1">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-				<h3 class="modal-title">Delete Milestone</h3>
-			</div>
-			<div class="modal-body">
-				<p>Are you sure you want to remove this milestone?</p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-primary" ng-click="confirmRemoveMilestone()" data-dismiss="modal">OK</button>
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal-dialog -->
